--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     "no-console": "off",
     "linebreak-style": 0,
     "no-underscore-dangle": 0,
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "operator-linebreak": ["error", "after"],
+    "implicit-arrow-linebreak": ["error", "below", "beside"]
   }
 }
